# p-chan

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: chan.rs  conversions.rs  lib.rs  macros.rs  ops.rs
tests/: chan.rs  methods.rs  ranges.rs  traits.rs
tests/snapshots/: ranges__ranges.snap
